--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -171,19 +171,6 @@ main {
   background-color: rgba(26, 39, 156, 0.4);
 }
 
-/*Validation du submit----------------------------------------------*/
-.submitvalid {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  overflow: auto;
-  background-color: rgba(26, 39, 156, 0.4);
-}
-
 .content {
   margin: 5% auto;
   width: 100%;
@@ -198,11 +185,92 @@ main {
   padding-top: 10px;
 }
 
+
+/*Validation du submit----------------------------------------------*/
+.submitvalid {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(26, 39, 156, 0.4);
+}
+
+.content-validation {
+  margin: 5% auto;
+  width: 100%;
+  max-width: 500px;
+  height: 850px;
+  animation-name: modalopen;
+  animation-duration: var(--modal-duration);
+  background: #232323;
+  border-radius: 8px;
+  overflow: hidden;
+  position: relative;
+  color: #fff;
+  padding-top: 10px;
+}
+.text-validation {
+  position: absolute;
+  width: 271px;
+  height: 102px;
+  left: 120px;
+  right: 140px;
+  top: 361px;
+  font-size: 36px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #FFFFFF;
+}
+
+.btn-close-validation {
+  position: absolute;
+  left: 185px;
+  right: 185px;
+  top: 795px;
+  bottom: 25px;
+  background: #FE142F;
+  border-radius: 8px;
+  border: none;
+  color: #fff;
+  text-align: center;
+}
+
+.close-validation {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  width: 32px;
+  height: 32px;
+  opacity: 1;
+  cursor: pointer;
+  transform: scale(0.7);
+}
+.close-validation:before,
+.close-validation:after {
+  position: absolute;
+  left: 15px;
+  content: " ";
+  height: 33px;
+  width: 3px;
+  background-color: #fff;
+}
+.close-validation:before {
+  transform: rotate(45deg);
+}
+.close-validation:after {
+  transform: rotate(-45deg);
+}
+
+/*-------------------------------------------------------*/
 .modal-body {
   padding: 15px 8%;
   margin: 15px auto;
 }
-/*-------------------------------------------------------*/
 .alertMessage {
   display: none;
   color: greenyellow;
@@ -319,6 +387,9 @@ input[data-error]::after {
 }
 
 .radio-label {
+  display: none;
+}
+.radio-tournois {
   display: none;
 }
 
